dark mode fixed

--- a/default.css
+++ b/default.css
@@ -1,4 +1,4 @@
-pre,textarea,body,input,td,tr,p {
+body {
 	background-color: #202020 !important;
 	background-image: none !important;
 	color: #e0e0e0 !important;
